# GSM_Module_Helper

./: .gitignore  AT.h  CMakeLists.txt  LICENSE  compile.sh  compileSerial.sh  main  main.cpp  masterSlave.sh  serial  serial.cpp
.github/workflows/: cmake.yml
config/: params.json
serial.dSYM/Contents/Resources/DWARF/: serial
src/: AT.h  main.cpp
